Fix: small update of documentation